--- a/FrotiX.Site.OLD/Pages/Shared/_ScriptsBasePlugins.cshtml
+++ b/FrotiX.Site.OLD/Pages/Shared/_ScriptsBasePlugins.cshtml
@@ -791,6 +791,8 @@
 		}
 	}
 </script>
+<!-- Kendo DropDownTree helper: conversão flat→tree para dados hierárquicos (Setor, etc.) -->
+<script src="~/js/utils/kendo-dropdowntree-helper.js" asp-append-version="true"></script>
 <script src="/js/shims/jquery.throttle-debounce.js"></script>
 <script>
 (function () {
